EDMS-219 [SonarCloud] Fix Medium Severity Code Issues